config/svc_wtf.yml
apiVersion: v1
kind: Service
metadata:
  namespace: kianfarah-dev
  name: wtf
  labels:
    app: wtf
spec:
  ports:
    - port: 80
      name: wtf
  clusterIP: None
  selector:
    app: wtf
